# cpp_oop

./: .clangd  .gitignore  CMakeLists.txt
Debug/: CMakeCache.txt  Makefile  MyProject  cmake_install.cmake  compile_commands.json  main
Debug/.cache/clangd/index/: Canvas.cpp.DF6A2A552524532C.idx  Canvas.h.A3004BBEE37683A1.idx  CanvasController.cpp.1A587F0405B0122F.idx  CanvasController.h.3003B8C645E24B34.idx  CanvasView.cpp.725CB58147BCCA6C.idx  CanvasView.h.83BDE37539CBE9B3.idx  Command.h.725E2157A5C5CE99.idx  Ellipse.cpp.F4BF1D3EC8F457A4.idx  Ellipse.h.CB6066AF0A51D5F9.idx  EllipseFactory.cpp.939093D08E10CF9C.idx  EllipseFactory.h.59F495E9F2174C35.idx  Image.cpp.659F408FB4D15607.idx  Image.h.49DC24FF252DA18C.idx  ImageFactory.cpp.F13609C513FE99E7.idx  ImageFactory.h.993A6624B3B572C9.idx  Line.cpp.F6990E8F01E2BD9B.idx  Line.h.2E46C90CEF5045EF.idx  LineFactory.cpp.3FE7E1CCE658357B.idx  LineFactory.h.D66D6646BE8EBDE6.idx  (+24 more)
src/: main.cpp
src/command/: Command.h  MoveCommand.cpp  MoveCommand.h  ResizeCommand.cpp  ResizeCommand.h
src/controller/: CanvasController.cpp  CanvasController.h  Sidebar.cpp  Sidebar.h
src/model/: Ellipse.cpp  Ellipse.h  EllipseFactory.cpp  EllipseFactory.h  Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h  Line.cpp  Line.h  LineFactory.cpp  LineFactory.h  Rectangle.cpp  Rectangle.h  RectangleFactory.cpp  RectangleFactory.h  Shape.cpp  Shape.h  ShapeFactory.h  Text.cpp  Text.h  TextFactory.cpp  TextFactory.h
src/view/: CanvasView.cpp  CanvasView.h  ShapeView.cpp  SideBar.cpp  SideBar.h  StatusView.cpp  StatusView.h
(+9 files in other folders)
